# EventEMin

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dataset/indoor_flying1/: calib.txt  events.txt  visualisation.m
dataset/indoor_flying1/pyPlotCMap/: README.md
dataset/poster_6dof/: events.txt
dataset/poster_rotation/: calib.txt  events.txt  sequence_error.m
dataset/poster_translation/: events.txt
include/: EventEMin.h  convolution.h  data_stats.h  dispersion.h  event.h  gauss_kernel.h  image.h  model.h  optimiser.h  test.h  types_def.h
include/EventEMin/: convolution.h  data_stats.h  dispersion.h  event.h  gauss_kernel.h  image.h  model.h  optimiser.h  test.h  types_def.h  utilities.h
include/EventEMin/dispersion/: dispersion.h  incremental_dispersion.h
include/EventEMin/dispersion/approximate_dispersion/: dispersion.h  potential.h  renyi.h  shannon.h  sharma_mittal.h  tsallis.h
include/EventEMin/dispersion/dispersion/: dispersion.h  potential.h  renyi.h  shannon.h  sharma_mittal.h  tsallis.h
include/EventEMin/dispersion/incremental_dispersion/: dispersion.h  potential.h  tsallis.h
include/EventEMin/event/: conversion.h  io.h  show.h  transform.h  type.h  undistort.h
include/EventEMin/image/: conversion.h  show.h  undistort.h
include/EventEMin/model/: incremental_model.h  model.h
include/EventEMin/model/incremental_model/: affinity.h  isometry.h  rotation.h  similarity.h  six_dof.h  translation2d.h  translation3d.h  translation_normal.h
include/EventEMin/model/model/: affinity.h  homography.h  isometry.h  rotation.h  similarity.h  six_dof.h  translation.h  translation2d.h  translation3d.h  translation_normal.h
include/EventEMin/optimiser/: gsl_fdf_optimiser.h
include/dispersion/: dispersion.h
include/dispersion/approx_dispersion/: dispersion.h  potential.h  renyi.h  shannon.h  sharma_mittal.h  tsallis.h
include/dispersion/approx_entropy/: approx_entropy.h  approx_potential.h  approx_renyi.h  approx_shannon.h  approx_sharma_mittal.h  approx_tsallis.h
include/dispersion/dispersion/: dispersion.h  potential.h  renyi.h  shannon.h  sharma_mittal.h  tsallis.h
include/dispersion/entropy/: entropy.h  potential.h  renyi.h  shannon.h  sharma_mittal.h  tsallis.h
include/event/: conversion.h  event_conversion.h  event_io.h  event_show.h  event_transform.h  event_type.h  event_undistort.h  io.h  show.h  transform.h  type.h  undistort.h
include/image/: conversion.h  image_conversion.h  image_show.h  image_undistort.h  show.h  undistort.h
include/model/: affinity.h  homography.h  isometry.h  model.h  optical_flow.h  rotation.h  similarity.h  six_dof.h  translation.h  translation3d.h  translation_normal.h
include/model/model/: affinity.h  homography.h  isometry.h  rotation.h  similarity.h  six_dof.h  translation.h  translation2d.h  translation3d.h  translation_normal.h
include/optimiser/: gsl_fdf_optimiser.h
test/: CMakeLists.txt  main_6dof.cpp  main_approx_entropy_6dof.cpp  main_approx_entropy_homography.cpp  main_approx_entropy_optical_flow.cpp  main_approx_entropy_rotation.cpp  main_entropy_6dof.cpp  main_entropy_homography.cpp  main_entropy_optical_flow.cpp  main_entropy_rotation.cpp  main_homography.cpp  main_incremental_6dof.cpp  main_incremental_rotation.cpp  main_incremental_test_sequence.cpp  main_incremental_test_sequence_3d.cpp  main_incremental_translation2d.cpp  main_rotation.cpp  main_test_sequence.cpp  main_test_sequence_3d.cpp  main_test_sequence_distorted.cpp  main_translation2d.cpp
