add_executable(example_approx_entropy_6dof main_approx_entropy_6dof.cpp)
add_executable(example_approx_entropy_homography main_approx_entropy_homography.cpp)
add_executable(example_approx_entropy_optical_flow main_approx_entropy_optical_flow.cpp)
add_executable(example_approx_entropy_rotation main_approx_entropy_rotation.cpp)
add_executable(example_entropy_6dof main_entropy_6dof.cpp)
add_executable(example_entropy_homography main_entropy_homography.cpp)
add_executable(example_entropy_rotation main_entropy_rotation.cpp)
add_executable(example_entropy_optical_flow main_entropy_optical_flow.cpp)
add_executable(example_test_sequence main_test_sequence.cpp)
add_executable(example_test_sequence_distorted main_test_sequence_distorted.cpp)

target_link_libraries(example_approx_entropy_6dof ${LIB_NAME}_lib)
target_link_libraries(example_approx_entropy_homography ${LIB_NAME}_lib)
target_link_libraries(example_approx_entropy_optical_flow ${LIB_NAME}_lib)
target_link_libraries(example_approx_entropy_rotation ${LIB_NAME}_lib)
target_link_libraries(example_entropy_6dof ${LIB_NAME}_lib)
target_link_libraries(example_entropy_homography ${LIB_NAME}_lib)
target_link_libraries(example_entropy_rotation ${LIB_NAME}_lib)
target_link_libraries(example_entropy_optical_flow ${LIB_NAME}_lib)
target_link_libraries(example_test_sequence ${LIB_NAME}_lib)
target_link_libraries(example_test_sequence_distorted ${LIB_NAME}_lib)
